# OpenMW-DS

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  build.gradle.kts  build.sh  gitlab-ci.yml  gradle.properties  openmw_ds_logo.afphoto  openmw_ds_splash.afphoto  readme-outline.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts  linesToCommentOut.txt  openmw.cfg  settings.fallback.cfg
app/src/main/: AndroidManifest.xml
app/src/main/assets/companion/: companion.omwscripts
app/src/main/assets/companion/scripts/companion/: companion.lua  companion_actor.lua  companion_global.lua
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/Alpha3/: BackTrace.cpp  BackTrace.h  CMakeLists.txt  java.cpp  java.h  main.cpp  main.h
app/src/main/cpp/openmw/: CMakeLists.txt
app/src/main/cpp/openmw/patches/: SDL_launcherSide.patch  sdl2-add-display-mode.patch
app/src/main/cpp/openmw/patches/boost/: regex.diff
app/src/main/cpp/openmw/patches/openmw/: 4307.diff  FIXME-setGlobalDefines-crash.patch  androidmain.cpp  companion-b-button-choice-fix.patch  companion-barter-export.patch  companion-barter-instance-id.patch  companion-command-pump.patch  companion-controller-input-fixes.patch  companion-controller-nav.patch  companion-core-push.patch  companion-crime-itemtaken.patch  companion-crime-message-export.patch  companion-crime-pickpocket.patch  companion-default-bindings-togglesneak.patch  companion-dialogue-export.patch  companion-disable-hideui-action.patch  companion-enchantingdialog-open-signal.patch  companion-gamecursor-stick-motion.patch  companion-gamecursor-suppress.patch  companion-hide-barter-on-hideui.patch  companion-hide-container-on-hideui.patch  companion-hide-dialogue-on-hideui.patch  companion-hide-gamewindows-on-dsmode.patch  companion-hide-travel-on-dsmode.patch  companion-hideui-gamepad-cursor.patch  companion-hud-elements.patch  companion-hud-visibility.patch  companion-keep-actor-names-on-hideui.patch  companion-keep-crosshair-on-hideui.patch  companion-localmap-export.patch  companion-log-sink.patch  companion-map-active.patch  companion-map-maximize.patch  companion-persuasion-open-signal.patch  companion-repair-export.patch  companion-restwait-export.patch  companion-skip-disk-log.patch  companion-spellbuyingwindow-open-signal.patch  companion-spellcreationdialog-open-signal.patch  companion-text-input-export.patch  (+11 more)
app/src/main/cpp/openmw/patches/uqm/: config_android.h.in  jni_engine.c
app/src/main/java/org/libsdl/app/: SDLActivity.java  SDLSurface.java
app/src/main/java/org/openmw/: EngineActivity.kt  MainActivity.kt  Variables.kt
app/src/main/java/org/openmw/companion/: CompanionActions.kt  CompanionScreen.kt  FavouritesRepository.kt  GameState.kt  GameStateRepository.kt  LogParser.kt  LogReader.kt  UiPreferences.kt
app/src/main/java/org/openmw/fragments/: SettingsFragment.kt
app/src/main/java/org/openmw/modDownloader/: CFGGenertor.kt  Downloader.kt  FileLogger.kt  GitLab.kt  KramConverter.kt  ManageDB.kt  ModDownloader.kt  NexusAPI.kt  POTI.kt  SSOHome.kt  WebArchiveOrg.kt  WebView.kt  ZipUtils.kt  mega.kt
app/src/main/java/org/openmw/ui/: MainScreen.kt
app/src/main/java/org/openmw/ui/controls/: ButtonsConfig.kt  DynamicButtons.kt  DynamicLeftThumbstick.kt  DynamicRightThumbstick.kt  JoystickLeft.kt  Keyboard.kt  StateManager.kt  mouse.kt
app/src/main/java/org/openmw/ui/navigation/: MainPageNav.kt  RootNav.kt
app/src/main/java/org/openmw/ui/overlay/: Animations.kt  Overlay.kt  RadialMenu.kt
app/src/main/java/org/openmw/ui/page/main/: MainPage.kt  MainPageViewModel.kt
app/src/main/java/org/openmw/ui/page/mod/: ModAssistant.kt  ModAssistantViewModel.kt
app/src/main/java/org/openmw/ui/page/setting/: SettingPage.kt
app/src/main/java/org/openmw/ui/theme/: Color.kt  Spacing.kt  Theme.kt  Type.kt
app/src/main/java/org/openmw/ui/view/: CommandLine.kt  GPUThermals.kt  MigrationDialogs.kt  MoeDialog.kt  NavigationSuiteScaffold.kt  PerformanceHud.kt  ProgressDialog.kt  Scaffolds.kt  SetupButton.kt  TopBottomBar.kt  UITools.kt
app/src/main/java/org/openmw/utils/: AdaptiveUtils.kt  AlphaMigration.kt  AppExtens.kt  ColorPicker.kt  CrashHelper.kt  DataStore.kt  DeltaPlugin.kt  FileBrowser.kt  GettingStarted.kt  IdentityMarker.kt  IniAssistant.kt  ManageAssets.kt  NavHostControllerUtils.kt  OpenMWConfigUtils.kt  QuickConsole.kt  S3LightFixes.kt  ShaderPatch.kt  Terminal.kt  Translation.kt  UQM.kt
app/src/main/res/drawable/: arrow_selector_tool_24dp_e8eaed_fill0_wght400_grad0_opsz24.xml  cursor_drawable.xml  grid_3x3_24dp_e8eaed_fill0_wght400_grad0_opsz24.xml  grid_4x4_24dp_e8eaed_fill0_wght400_grad0_opsz24.xml  mouse_24dp_e8eaed_fill0_wght400_grad0_opsz24.xml  pointer_icon.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  ic_launcher_rounded_background.xml  strings.xml  themes.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: network_security_config.xml
app/ui/: UI.cfg  button_configs.json  input_v3.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
outputs/: controller-scheme-draft.md
